--- a/SlackTeamExplorer/SlackTeamExplorer/UI/Base.lproj/Main.storyboard
+++ b/SlackTeamExplorer/SlackTeamExplorer/UI/Base.lproj/Main.storyboard
@@ -1,25 +1,123 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E36b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mzC-nr-MXS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="83I-TY-JHq">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="mzC-nr-MXS" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5OY-Fs-xa7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="FUs-lQ-KYo" kind="relationship" relationship="rootViewController" id="rsC-Cz-eee"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sMY-eL-RqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-411" y="388"/>
+        </scene>
+        <!--Team Members-->
+        <scene sceneID="aSD-Rh-rpI">
+            <objects>
+                <viewController title="Team Members" automaticallyAdjustsScrollViewInsets="NO" id="FUs-lQ-KYo" customClass="ViewController" customModule="SlackTeamExplorer" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yhC-b9-f2L"/>
+                        <viewControllerLayoutGuide type="bottom" id="9Mp-KR-Q23"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8eb-Dt-cbE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Unn-ZG-Wju">
+                                <rect key="frame" x="5" y="69" width="590" height="521"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="srV-5t-str">
+                                    <size key="itemSize" width="391" height="97"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" reuseIdentifier="MemberCell" id="LK7-E9-JJK" customClass="MemberCell" customModule="SlackTeamExplorer" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="391" height="58"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydp-xv-ph9">
+                                                    <rect key="frame" x="64" y="8" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R8H-nM-Mls">
+                                                    <rect key="frame" x="8" y="8" width="42" height="42"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="R8H-nM-Mls" secondAttribute="height" multiplier="1:1" id="boX-Jf-KHN"/>
+                                                        <constraint firstAttribute="width" secondItem="R8H-nM-Mls" secondAttribute="height" multiplier="1:1" id="l0t-eS-T01"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdO-r2-UQe">
+                                                    <rect key="frame" x="64" y="29.5" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="R8H-nM-Mls" firstAttribute="top" secondItem="ydp-xv-ph9" secondAttribute="top" id="23o-UX-08H"/>
+                                            <constraint firstItem="R8H-nM-Mls" firstAttribute="top" secondItem="LK7-E9-JJK" secondAttribute="topMargin" id="27M-xM-ojg"/>
+                                            <constraint firstItem="R8H-nM-Mls" firstAttribute="leading" secondItem="LK7-E9-JJK" secondAttribute="leadingMargin" id="4PB-Uj-fIY"/>
+                                            <constraint firstItem="cdO-r2-UQe" firstAttribute="leading" secondItem="ydp-xv-ph9" secondAttribute="leading" id="7iC-ih-Boj"/>
+                                            <constraint firstItem="R8H-nM-Mls" firstAttribute="bottom" secondItem="cdO-r2-UQe" secondAttribute="bottom" id="Bbo-Uw-gsX"/>
+                                            <constraint firstItem="ydp-xv-ph9" firstAttribute="leading" secondItem="R8H-nM-Mls" secondAttribute="trailing" constant="14" id="Goi-v8-dUo"/>
+                                            <constraint firstItem="R8H-nM-Mls" firstAttribute="bottom" secondItem="LK7-E9-JJK" secondAttribute="bottomMargin" id="O8z-Rp-0di"/>
+                                        </constraints>
+                                        <size key="customSize" width="391" height="58"/>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="R8H-nM-Mls" id="QaI-BJ-hEP"/>
+                                            <outlet property="titleLabel" destination="cdO-r2-UQe" id="b4V-hV-P5D"/>
+                                            <outlet property="usernameLabel" destination="ydp-xv-ph9" id="InP-Ot-wUd"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="FUs-lQ-KYo" id="shU-Cw-9Df"/>
+                                    <outlet property="delegate" destination="FUs-lQ-KYo" id="yNg-ph-t8b"/>
+                                </connections>
+                            </collectionView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="m0o-xh-pAV">
+                                <rect key="frame" x="281" y="281" width="37" height="37"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90588235289999997" green="0.89411764709999997" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="m0o-xh-pAV" secondAttribute="centerY" id="18B-m4-dz1"/>
+                            <constraint firstItem="Unn-ZG-Wju" firstAttribute="leading" secondItem="8eb-Dt-cbE" secondAttribute="leading" constant="5" id="29M-d4-Ksz"/>
+                            <constraint firstItem="Unn-ZG-Wju" firstAttribute="bottom" secondItem="9Mp-KR-Q23" secondAttribute="top" constant="-10" id="2rf-sM-ga2"/>
+                            <constraint firstAttribute="centerX" secondItem="m0o-xh-pAV" secondAttribute="centerX" id="OBj-hD-flG"/>
+                            <constraint firstAttribute="trailing" secondItem="Unn-ZG-Wju" secondAttribute="trailing" constant="5" id="Ryl-Vm-uuB"/>
+                            <constraint firstItem="Unn-ZG-Wju" firstAttribute="top" secondItem="yhC-b9-f2L" secondAttribute="bottom" constant="5" id="yeC-dr-lNN"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Team Members" id="JZQ-QA-R7q"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Unn-ZG-Wju" id="UHo-fT-uyB"/>
+                        <outlet property="loadingActivityIndicator" destination="m0o-xh-pAV" id="wez-qk-xpE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MiW-tS-lMP" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="363" y="388"/>
         </scene>
     </scenes>
 </document>
