--- a/SlackTeamExplorer/SlackTeamExplorer/UI/Base.lproj/Main.storyboard
+++ b/SlackTeamExplorer/SlackTeamExplorer/UI/Base.lproj/Main.storyboard
@@ -53,6 +53,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="391" height="58"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slack" translatesAutoresizingMaskIntoConstraints="NO" id="HKe-BJ-DN4">
+                                                    <rect key="frame" x="8" y="0.0" width="383" height="58"/>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydp-xv-ph9">
                                                     <rect key="frame" x="64" y="8" width="41" height="19.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
@@ -78,11 +81,15 @@
                                         <constraints>
                                             <constraint firstItem="R8H-nM-Mls" firstAttribute="top" secondItem="ydp-xv-ph9" secondAttribute="top" id="23o-UX-08H"/>
                                             <constraint firstItem="R8H-nM-Mls" firstAttribute="top" secondItem="LK7-E9-JJK" secondAttribute="topMargin" id="27M-xM-ojg"/>
+                                            <constraint firstAttribute="trailing" secondItem="HKe-BJ-DN4" secondAttribute="trailing" id="2e7-ry-v7X"/>
+                                            <constraint firstItem="HKe-BJ-DN4" firstAttribute="top" secondItem="LK7-E9-JJK" secondAttribute="top" id="49Y-HX-XHM"/>
                                             <constraint firstItem="R8H-nM-Mls" firstAttribute="leading" secondItem="LK7-E9-JJK" secondAttribute="leadingMargin" id="4PB-Uj-fIY"/>
                                             <constraint firstItem="cdO-r2-UQe" firstAttribute="leading" secondItem="ydp-xv-ph9" secondAttribute="leading" id="7iC-ih-Boj"/>
                                             <constraint firstItem="R8H-nM-Mls" firstAttribute="bottom" secondItem="cdO-r2-UQe" secondAttribute="bottom" id="Bbo-Uw-gsX"/>
                                             <constraint firstItem="ydp-xv-ph9" firstAttribute="leading" secondItem="R8H-nM-Mls" secondAttribute="trailing" constant="14" id="Goi-v8-dUo"/>
                                             <constraint firstItem="R8H-nM-Mls" firstAttribute="bottom" secondItem="LK7-E9-JJK" secondAttribute="bottomMargin" id="O8z-Rp-0di"/>
+                                            <constraint firstAttribute="bottom" secondItem="HKe-BJ-DN4" secondAttribute="bottom" id="OIJ-dm-Yq0"/>
+                                            <constraint firstItem="HKe-BJ-DN4" firstAttribute="leading" secondItem="LK7-E9-JJK" secondAttribute="leadingMargin" id="YL8-hc-GQ0"/>
                                         </constraints>
                                         <size key="customSize" width="391" height="58"/>
                                         <connections>
@@ -139,7 +146,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aqS-AP-geI" userLabel="Avatar - Image View">
-                                <rect key="frame" x="214.5" y="135" width="171" height="172"/>
+                                <rect key="frame" x="214" y="135" width="171" height="172"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="aqS-AP-geI" secondAttribute="height" multiplier="1:1" id="rIV-cV-1c8"/>
@@ -151,34 +158,58 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hSu-Cr-OSb" userLabel="Content - Scroll View">
                                 <rect key="frame" x="0.0" y="306.5" width="600" height="293.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="asdfasdf" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enc-og-geo" userLabel="Username - Label">
-                                        <rect key="frame" x="0.0" y="8" width="600" height="19.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enc-og-geo" userLabel="Username - Label">
+                                        <rect key="frame" x="0.0" y="8" width="600" height="0.0"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eEI-fw-uwg" userLabel="Full Name - Label">
-                                        <rect key="frame" x="0.0" y="35.5" width="600" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="16" width="600" height="0.0"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsD-ox-l0O" userLabel="Title - Label">
-                                        <rect key="frame" x="0.0" y="47.5" width="600" height="0.0"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
+                                        <rect key="frame" x="0.0" y="28" width="600" height="0.0"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AfL-Eg-w4n" userLabel="Phone - Label">
+                                        <rect key="frame" x="20" y="43" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eze-6Z-KW5" userLabel="Email - Label">
+                                        <rect key="frame" x="20" y="55" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNC-8t-4Vg" userLabel="Skype - Label">
+                                        <rect key="frame" x="20" y="67" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="AfL-Eg-w4n" firstAttribute="leading" secondItem="fNC-8t-4Vg" secondAttribute="leading" id="1Zg-yp-tdn"/>
                                     <constraint firstItem="enc-og-geo" firstAttribute="width" secondItem="eEI-fw-uwg" secondAttribute="width" id="1oL-wh-xcI"/>
+                                    <constraint firstItem="fNC-8t-4Vg" firstAttribute="top" secondItem="eze-6Z-KW5" secondAttribute="bottom" constant="12" id="ETc-uf-QpI"/>
                                     <constraint firstItem="eEI-fw-uwg" firstAttribute="leading" secondItem="hSu-Cr-OSb" secondAttribute="leading" id="FBu-Br-xcz"/>
+                                    <constraint firstItem="AfL-Eg-w4n" firstAttribute="top" secondItem="xsD-ox-l0O" secondAttribute="bottom" constant="15" id="GSr-g6-zcR"/>
+                                    <constraint firstAttribute="bottom" secondItem="fNC-8t-4Vg" secondAttribute="bottom" constant="10" id="JFs-UQ-uDh"/>
                                     <constraint firstAttribute="centerX" secondItem="xsD-ox-l0O" secondAttribute="centerX" constant="-0.5" id="KFq-Z9-jpU"/>
-                                    <constraint firstAttribute="bottom" secondItem="xsD-ox-l0O" secondAttribute="bottom" constant="235" id="Kp0-by-E8B"/>
+                                    <constraint firstItem="AfL-Eg-w4n" firstAttribute="leading" secondItem="hSu-Cr-OSb" secondAttribute="leading" constant="20" id="LeX-Oa-Rg4"/>
                                     <constraint firstAttribute="trailing" secondItem="eEI-fw-uwg" secondAttribute="trailing" id="S8e-Vh-dVW"/>
                                     <constraint firstAttribute="centerX" secondItem="eEI-fw-uwg" secondAttribute="centerX" id="c1E-d4-VgF"/>
                                     <constraint firstItem="xsD-ox-l0O" firstAttribute="top" secondItem="eEI-fw-uwg" secondAttribute="bottom" constant="12" id="cHr-Sb-eAo"/>
                                     <constraint firstItem="eEI-fw-uwg" firstAttribute="top" secondItem="enc-og-geo" secondAttribute="bottom" constant="8" id="k7Q-pv-hhM"/>
+                                    <constraint firstItem="AfL-Eg-w4n" firstAttribute="leading" secondItem="eze-6Z-KW5" secondAttribute="leading" id="mmI-IL-V3c"/>
+                                    <constraint firstItem="eze-6Z-KW5" firstAttribute="top" secondItem="AfL-Eg-w4n" secondAttribute="bottom" constant="12" id="rSc-ti-K0J"/>
                                     <constraint firstItem="enc-og-geo" firstAttribute="width" secondItem="xsD-ox-l0O" secondAttribute="width" id="tWk-hw-vrk"/>
                                     <constraint firstItem="enc-og-geo" firstAttribute="top" secondItem="hSu-Cr-OSb" secondAttribute="top" constant="8" id="xM9-5j-SQu"/>
                                     <constraint firstAttribute="centerX" secondItem="enc-og-geo" secondAttribute="centerX" id="ycQ-mY-LzU"/>
@@ -218,8 +249,11 @@
                     </view>
                     <connections>
                         <outlet property="avatarImageView" destination="aqS-AP-geI" id="dQB-EJ-Oq4"/>
+                        <outlet property="emailLabel" destination="eze-6Z-KW5" id="j0j-M3-6bk"/>
                         <outlet property="fullNameLabel" destination="eEI-fw-uwg" id="gV9-ns-HKa"/>
                         <outlet property="headerImageView" destination="O9D-b9-R5a" id="K13-Pj-dQ8"/>
+                        <outlet property="phoneLabel" destination="AfL-Eg-w4n" id="16L-xr-kN4"/>
+                        <outlet property="skypeLabel" destination="fNC-8t-4Vg" id="Wol-bK-bSc"/>
                         <outlet property="titleLabel" destination="xsD-ox-l0O" id="hJ2-Qv-x4D"/>
                         <outlet property="usernameLabel" destination="enc-og-geo" id="GC7-V2-Icd"/>
                     </connections>
